docs-site/versioned_docs/version-0.6.1/features/design-resume.md
---
id: design-resume
title: Design Resume
description: Edit the local resume document that Meow AI uses for tailoring, scoring, and PDF generation.
sidebar_position: 4
---

## What it is

Design Resume is Meow AI' local-first resume editor.

It stores an exact Reactive Resume v5 document inside Meow AI. Meow AI does not convert that document into a separate internal resume format. Meow AI uses this local RR v5 document as the primary source of truth for:

- profile context
- project catalogs
- tailoring inputs
- scoring inputs
- PDF generation

## Why it exists

Depending on Reactive Resume for every profile lookup, project read, and PDF flow makes Meow AI more fragile than it needs to be.

Design Resume reduces that dependency by letting you:

- import from Reactive Resume once
- keep editing locally inside Meow AI
- preserve the original Reactive Resume v5 structure
- export back out when needed

## How to use it

1. Open **Design Resume** from the main navigation.
2. If this is your first time, click **Import from Reactive Resume**.
3. Edit the left-panel fields directly.
4. Watch for the local save indicator in the header.
5. Use **Export** when you want the current Reactive Resume v5 JSON.

When Design Resume changes, ready jobs with system-generated PDFs are queued for automatic regeneration. Until the queue catches up, those jobs show a `PDF stale` indicator and keep the old PDF available as **View old PDF** / **Download old PDF**.

Current v1 scope:

- left-panel editing only
- local editing of the stored RR v5 document
- export of the stored RR v5 document
- PDF preview and PDF download using the selected renderer

## Common problems

- Import button fails:
  Verify your Reactive Resume mode, URL, credentials, and selected base resume in **Settings**.
- You already had a local Design Resume from an older Meow AI build:
  Re-import from a Reactive Resume v5 base resume. Older local documents are no longer auto-converted.
- Changes do not appear in a generated PDF:
  Ready jobs that already use system-generated PDFs are auto-queued for regeneration after Design Resume edits. If a job shows `PDF stale`, Meow AI is keeping the old PDF available while the new one is queued or regenerating.
- Picture upload fails:
  Use `png`, `jpeg`, or `webp` images.
- You changed the upstream resume and want that copied over:
  Use **Re-import** to replace the local document with the current Reactive Resume base resume.

## Related pages

- [Reactive Resume](./reactive-resume)
- [Settings](./settings)
- [Orchestrator](./orchestrator)
